gcc/testsuite/g++.dg/ext/attrib57.C
// PR c++/87175
// { dg-do compile }
// { dg-options "" }

struct __attribute__)) foo { };	// { dg-error "expected" }
struct __attribute__()) bar { };// { dg-error "expected" }
